# daily_name

./: README.md  index.html  make_db.py  pyproject.toml  rng.js
css/: main.css
data/: female_name_list.txt  male_name_list.txt  name_list.txt
data/name_db/: F.Aadhya.json  F.Aaliyah.json  F.Aanya.json  F.Aarna.json  F.Aaron.json  F.Aarya.json  F.Abagail.json  F.Abbey.json  F.Abbie.json  F.Abbigail.json  F.Abby.json  F.Abigail.json  F.Abigale.json  F.Abigayle.json  F.Abrielle.json  F.Abril.json  F.Ada.json  F.Adah.json  F.Adalee.json  F.Adaline.json  F.Adalyn.json  F.Adalynn.json  F.Adamaris.json  F.Adda.json  F.Addie.json  F.Addilyn.json  F.Addilynn.json  F.Addison.json  F.Addisyn.json  F.Addyson.json  F.Adel.json  F.Adela.json  F.Adelaide.json  F.Adele.json  F.Adelia.json  F.Adelina.json  F.Adeline.json  F.Adell.json  F.Adella.json  F.Adelle.json  (+8085 more)
