[project]
name = "daily-name"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thomas Brooks", email = "tgbrooks@gmail.com" }
]
dependencies = [
    "polars>=1.31.0",
    "requests>=2.32.4",
    "adbc-driver-manager>=1.7.0",
    "pyarrow>=20.0.0",
    "pandas>=2.3.1",
    "sqlalchemy>=2.0.41",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=9.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/daily_name"]
